# example

Installer/: Info.txt
Installer/SRPMS/: MySvcs-1.0.0-1test.src.rpm  MySvcs.spec  log.MySvcs_build
Installer/WiX/: doit.txt  ldoit.txt  project.msi  project.wxs
Installer/WiX/lib/: libMySvcsLibs.dll.def
Installer/src/include/: my_svcs.h
Installer/src/lib/: my_svcs_checkinlibs.c  my_svcs_checkoutlibs.c  my_svcs_cmdlinelibs.c  my_svcs_fileslibs.c  my_svcs_initrepositorylibs.c  my_svcs_utilslibs.c
my_dlopen_so_project/: info.txt
my_dlopen_so_project/my_dlopen_so-1.0.0/: Makefile.am  Makefile.in  README  configure  configure.ac
my_dlopen_so_project/my_dlopen_so-1.0.0/build-aux/: aclocal.m4  julia_set_it.m4
my_dlopen_so_project/my_dlopen_so-1.0.0/src/: my_dlopen_so_main.c
my_dlopen_so_project/my_dlopen_so-1.0.0/src/libs/: my_dlopen_so_libs.c
my_dlopen_so_project/rpm/: README.my_dlopen_so  my_dlopen_so.spec
